compiler/testData/diagnostics/tests/valueParameterWithoutExplicitType.fir.kt
fun foo(
    <!VALUE_PARAMETER_WITHOUT_EXPLICIT_TYPE!>x<!>
) {}